[tool.poetry]
name = "varibad"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.13.0"
matplotlib = "^3.7.1"
wandb = "^0.14.1"
ray = {version = "^2.3.1", extras = ["tune"]}

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
mypy = "^0.971"
flake8 = "^5.0.4"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
