[tool.poetry]
name = "varibad"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "1.13.0"
torchvision = "0.14.0"
matplotlib = "^3.7.1"
wandb = "^0.14.1"
ray = {version = "^2.3.1", extras = ["tune"]}
pillow = "^9.5.0"
filelock = "^3.12.0"
fire = "^0.5.0"
humanize = "^4.6.0"
requests = "^2.29.0"
tqdm = "^4.65.0"
scipy = ">=1.8,<1.9.2"
scikit-image = "^0.20.0"
CLIP = {git = "https://github.com/openai/CLIP.git", rev = "main"}
ftfy = "^6.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
mypy = "^0.971"
flake8 = "^5.0.4"
pre-commit = "^3.2.2"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
